@startuml
set namespaceSeparator ::
skinparam linetype ortho

namespace DSED_M01_Fichiers_Texte {
    class Program {
        {static} Main(args:string[]) : void
    }
}

namespace M01_Entite {
    class Municipalite {
        + ctor(p_municipaliteId : int, p_nomMunicipalite : string, p_adresseCourriel : string, p_adresseWeb : string, p_dateProchaineElection : DateTime, p_actif : bool = true)
        + CodeGeographique : int <<get>> <<set>>
        + NomMunicipalite : string <<get>> <<set>>
        + AdresseCourriel : string? <<get>> <<set>>
        + AdresseWeb : string? <<get>> <<set>>
        + DateProchaineElection : datetime? <<get>> <<set>>
        + <<override>> Equals(obj : object) : bool
        + <<override>> GetHashCode() : int
    }

    interface IDepotMunicipalites {
        + ChercherMunicipaliteParCodeGeographique(p_codeGeographique : int) : Municipalite?
        + ListerMunicipalitesActives() : IEnumerable<Municipalite>
        + DesactiverMunicipalite(p_municipalite : Municipalite) : void
        + AjouterMunicipalite(p_municipalite : Municipalite) : void
        + MAJMunicipalite(p_municipalite : Municipalite) : void
    }

    interface IDepotImportationMunicipalites {
        LireMunicipalites() : IEnumerable<Municipalite>
    }
}

namespace M01_Srv_Municipalite << srvm >> {
    class TraitementImporterDonneesMunicipalite {
        + ctor(p_depotImportationMunicipalites : IDepotImportationMunicipalites, p_depotMunicipalites : IDepotMunicipalites)
        + Executer() : StatistiquesImportationDonnees
    }

    class StatistiquesImportationDonnees {
        + NombreEnregistrementsAjoutes : int <<get>> <<set>>
        + NombreEnregistrementsModifies : int <<get>> <<set>>
        + NombreEnregistrementsDesactives : int <<get>> <<set>>
        + NombreEnregistrementsNonModifies : int <<get>> <<set>>
        + NombreMunicipalitesImportees : int <<get>> <<set>>
        + <<override>> ToString() : string
    }

    TraitementImporterDonneesMunicipalite --> M01_Entite::IDepotImportationMunicipalites
    TraitementImporterDonneesMunicipalite --> M01_Entite::IDepotMunicipalites
    ' M01_Entite::IDepotImportationMunicipalites -[hidden]-> M01_Entite::IDepotMunicipalites
    ' M01_Entite::IDepotImportationMunicipalites -[hidden]-> TraitementImporterDonneesMunicipalite
    ' TraitementImporterDonneesMunicipalite -[hidden]-> StatistiquesImportationDonnees
    ' StatistiquesImportationDonnees -[hidden]> M01_Entite::Municipalite
}

namespace M01_DAL_Municipalite_SQLServer {
    class DepotMunicipalitesSQLServer {
        + ctor(p_contexte : MunicipaliteContextSQLServer)
        + AjouterMunicipalite(p_municipalite : srvm.Municipalite) : void
        + ChercherMunicipaliteParCodeGeographique(p_codeGeographique : int) : srvm.Municipalite?
        + DesactiverMunicipalite(p_municipalite : srvm.Municipalite) : void
        + ListerMunicipalitesActives() : IEnumerable<srvm.Municipalite>
        + MAJMunicipalite(p_municipalite : srvm.Municipalite) : void
    }

    DepotMunicipalitesSQLServer ..|> M01_Entite::IDepotMunicipalites
    DepotMunicipalitesSQLServer --> MunicipaliteContextSQLServer

    class Municipalite {
        + ctor()
        + ctor(p_municipalite : srvm.Municipalite)
        + MunicipaliteId : int <<get>> <<set>>
        + NomMunicipalite : string <<get>> <<set>>
        + AdresseCourriel : string? <<get>> <<set>>
        + AdresseWeb : string? <<get>> <<set>>
        + DateProchaineElection : datetime? <<get>> <<set>>
        + Actif : bool <<get>> <<set>>
        + VersEntite() : srvm.Municipalite
    }

    class MunicipaliteContextSQLServer {
        + ctor(options : DbContextOptions<MunicipaliteContextSQLServer>)
        + Municipalite : DbSet<Municipalite> <<get>> <<set>>
        # <<override>> OnConfiguring(p_optionBuilder : DbContextOptionsBuilder) : void <<si pas appsettings.json>>
    }

    ' Municipalite -[hidden]-> MunicipaliteContextSQLServer
    ' MunicipaliteContextSQLServer -[hidden]-> DepotMunicipalitesSQLServer
}

namespace M01_DAL_Import_Munic_CSV {
    class DepotImportationMunicipaliteCSV {
        + ctor(p_nomFichierAImporter : string)
        + LireMunicipalites() : IEnumerable<Municipalite>
    }

    DepotImportationMunicipaliteCSV ..|> M01_Entite::IDepotImportationMunicipalites
}

namespace M01_DAL_Import_Munic_JSON {
    class DepotImportationMunicipaliteJSON {
        + ctor(p_nomFichierAImporter : string)
        + LireMunicipalites() : IEnumerable<Municipalite>
    }
    
    DepotImportationMunicipaliteJSON ..|> M01_Entite::IDepotImportationMunicipalites
}

' DSED_M01_Fichiers_Texte .> M01_DAL_Import_Munic_JSON
' DSED_M01_Fichiers_Texte ..> M01_DAL_Import_Munic_CSV
' DSED_M01_Fichiers_Texte ..> M01_DAL_Municipalite_SQLServer
DSED_M01_Fichiers_Texte ..> M01_Srv_Municipalite::TraitementImporterDonneesMunicipalite

' M01_DAL_Import_Munic_CSV ..> M01_Entite
' M01_DAL_Import_Munic_JSON ..> M01_Entite
' M01_DAL_Municipalite_SQLServer ..> M01_Entite
' M01_Srv_Municipalite ..> M01_Entite

System.Data.Entity::DbContext -[hidden]-> M01_DAL_Municipalite_SQLServer::Municipalite
M01_DAL_Municipalite_SQLServer::MunicipaliteContextSQLServer -u-|> System.Data.Entity::DbContext

@enduml
